feat: convert pdf

--- a/questions/2021-09.md
+++ b/questions/2021-09.md
@@ -52,9 +52,15 @@
 
 大的方向分为 **软件、硬件、机械** 三个组，而其中软件又包含 **定位、视觉、策略** 三个方向。 此次招新也是以此为标准招收，各个组详细介绍如下：
 
-**软件-策略**：策略可以说是基地内部最大的组，每个比赛都离不开策略，策略的任务是根据
+**软件-策略**：策略可以说是基地内部最大的组，每个比赛都离不开策略，策略的任务是根据当前场上已有的信息进行综合决策
 
-**机械**：机械组主要
+**软件-视觉**：视觉是机器人的眼睛，机器人通过视觉感知场上势态变化，将得到的信息传送给策略或底层，多用到OpenCV和深度学习等知识。
+
+**软件-定位**：定位多根据slam等框架，来对周围的环境进行同步建图，来达到定位自身以及规避障碍物等
+
+**硬件**：
+
+**机械**：机械组主要负责规制图纸，制作模型、器件等
 
 
 
