--- a/questions/2021-09.md
+++ b/questions/2021-09.md
@@ -26,27 +26,17 @@
 
 **V5++：**传统项目为仿真 5v5 足球平台，获得中国机器人大赛冠军、全国机器人锦标赛冠军、中国机器人及人工智能大赛冠军等，队伍的轮式车在 2019 年首次参加世界杯小车项目，获得亚军；2020 年首次参加 ICRA RoboMaster 人工智能挑战赛，国际赛中取得第六名好成绩；同时也研究空中机器人项目，获得过全国机器人锦标赛一等奖等一些无人机奖项；仿真避障 11v11 足球中获得中国机器人大赛冠军、全国机器人锦标赛冠军等奖项。
 
-![V5++详解](../resource/questions/V5++-introduction.jpg)
-
 **人组**：自主研发人性格斗机器人“浩劫”机器人，在国内多个机器人赛事中夺得冠军、一等奖等荣誉；设计研发制造全自主魔方机器人；自主开发新一代开放平台小型全自主机器人“莫扎特”机器人，也是关节型类人型机器人。
-
-![人组详解](../resource/questions/rx-introduction.jpg)
 
 **标准平台组**：包括中型仿真组、救援仿真组、3D 仿真组、实物 NAO 组；在中国机器人大赛中型仿真足球赛冠军、Robocup 中国赛救援仿真二等奖、2020 全国机器人锦标赛多个一等奖。
 
-![标平详解](../resource/questions/bp-introduction.jpg)
-
 **轮组**：轮式足球机器人，基地的机器人元老之一，依靠全景摄像头捕获的图像在足球门上进行自主定位与自主决策，完成一系列抓球、避障、传球、射门等动作。目前已经历4代技术更新，目前正在完成第五代技术更新，在国内处于领先水平，参加了全国机器人锦标赛、人工智能大赛、FIRA、挑战杯、创新创业大赛等多种比赛，并获得多个国家级奖项。
-
-![轮组详解](../resource/questions/ls-introduction.jpg)
 
 **鱼组**：参加国际水中机器人大赛，并获得包括冠军五项在内的十个奖项；鱼组队员中2人获得学生标兵荣誉，11人获得国家奖学金，4人获得专项奖学金；也参与过 RoboMaster 人工智能挑战赛、两项省级大创等，也自主开发了新式 ROV 。
 
-![鱼组详解](../resource/questions/sy-introduction.jpg)
-
 **文职职责**：成立于2019年10月，文职部门区别于技术部门，具有引领、管理、服务与监督的职能。文职成立将更好地为各项目组提供支持与帮助，使各组资源得到优化整合，营造开拓进取、积极向上的基地文化。
 
-![文职详解](../resource/questions/wz-introduction.jpg)
+更多关于基地组别的介绍详见：[关于我们-基地组别介绍](https://tutorials.npu5v5.cn/#/aboutus/group)
 
 ### 根据技术方向分组
 
