bugFix: add hardware details

--- a/questions/2021-09.md
+++ b/questions/2021-09.md
@@ -48,7 +48,25 @@
 
 **软件-定位**：定位多根据slam等框架，来对周围的环境进行同步建图，来达到定位自身以及规避障碍物等
 
-**硬件**：
+**硬件**：硬件主要工作为 **嵌入式系统构建开发**，所以所谓**硬件部**其实也可以等价于**嵌入式系统开发部门**。而不是仅仅的电子电路设计部门。
+
+**嵌入式系统**由**硬件**和**软件**组成．是能够**独立**进行运作的器件。其**软件内容**只包括软件运行环境及其操作系统。**硬件内容**包括信号处理器、存储器、通信模块等在内的多方面的内容。相比于一般的计算机处理系统而言，嵌入式系统存在较大的差异性， 它不能实现大容量的存储功能，因为没有与之相匹配的大容量介质，大部分采用的存储介质有E-PROM、EEPROM 等， 软件部分以API编程接口作为开发平台的核心。由于它的这些局限性使得其与在LINUX系统或WINDOWS系统应用层（你在这些系统上开发的时候并不用关心硬件和外设是怎么完成工作的，只管调用系统封装的函数即可）上的开发**有很大的不同**，这也是为什么嵌入式系统构建开发部门区别于基地软件部门的原因。
+
+*嵌入式开发要点概括：*
+
+**以应用为中心**：强调嵌入式系统的**目标**是满足用户的**特定需求**。就绝大多数完整的嵌入式系统而言，用户打开电源即可**直接享用其功能**，无需二次开发或仅需少量配置操作。
+
+**专用性：**嵌入式系统的应用场合大多对**可靠性**、实时性有较高要求，这就决定了服务于特定应用的专用系统是嵌入式系统的主流模式，它并**不强调**系统的通用性和可扩展。这种专用性通常也导致嵌入式系统是一个**软硬件紧密集成**的最终系统，因为这样才能更有效地提高整个系统的可靠性并降低成本，并使之具有更好的用户体验。
+
+**以现代计算机技术为核心：**嵌入式系统的最基本支撑技术，大致上包括**集成电路设计技术**、**系统结构技术**、**传感与检测技术**、**嵌入式操作系统和实时操作系统技术**、**资源受限系统的高可靠软件开发技术**、**系统形式化规范与验证技术**、**通信技术**、**低功耗技术**、**特定应用领域的数据分析**、**信号处理和控制优化技术**等，它们围绕计算机基本原理，集成进特定的专用设备就形成了一个嵌入式系统。
+
+**软硬件可裁剪：**嵌入式系统针对的应用场景如此之多，并带来差异性极大的设计指标要求(功能性能、可靠性、成本、功耗)，以至于现实上很难有一套方案满足所有的系统要求，因此根据需求的不同，灵活裁剪软硬件、组建符合要求的最终系统是嵌入式技术发展的必然技术路线。
+
+所以说，**硬件部**并不是只研究如何设计电子电路的部门，而是一个结合**电路设计**，**程序设计**为一体的专用系统设计部门。
+
+对在**程序设计**或者**电路设计**方面有兴趣，有能力的同学我们都**十分欢迎**！
+
+
 
 **机械**：机械组主要负责规制图纸，制作模型、器件等
 
